@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-06-18T01:43:22Z",
+  "timestamp" : "2022-06-18T16:23:27Z",
   "count_outdated" : 2160,
   "uniques_outdated" : 434,
   "count" : 2191,
@@ -7,9 +7,9 @@
   "clones" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
