@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-06-05T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
