@@ -1,3 +1,10 @@
+2022-06-18T16:23:27Z:
+* notice: last 14d: unq all: 7 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 434 2160 / 454 2191
+* notice: next accum: outdated-unq outdated-all / unq all: 434 2160 / 454 2191
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-04 2022-06-18]
+
 2022-06-18T01:43:22Z:
 * notice: last 14d: unq all: 7 31
 * notice: prev accum: outdated-unq outdated-all / unq all: 433 2158 / 454 2189
